--- a/cart.html
+++ b/cart.html
@@ -157,7 +157,7 @@
         </div>
 
         <div class="copyright">
-            <p>© 2024, Ayeshakhan - HTML CSS Ecommerce Template</p>
+            <p>© 2024, AishwaryaMore - HTML CSS Ecommerce Template</p>
         </div>
       </footer>
     
