--- a/sproduct.html
+++ b/sproduct.html
@@ -206,7 +206,7 @@
         </div>
 
         <div class="copyright">
-            <p>© 2024, Ayeshakhan - HTML CSS Ecommerce Template</p>
+            <p>© 2024, aishwaryamore - HTML CSS Ecommerce Template</p>
         </div>
       </footer>
     
