--- a/blog.html
+++ b/blog.html
@@ -162,7 +162,7 @@
         </div>
 
         <div class="copyright">
-            <p>© 2024, AishwaryaMore - HTML CSS Ecommerce Template</p>
+            <p>© 2024, aishwaryamore - HTML CSS Ecommerce Template</p>
         </div>
       </footer>
     
